# XToPod

./: .env.example  .gitignore  README.md  launch.bat  launch.command  pyproject.toml  requirements.txt
config/: settings.py
scripts/: convert_cookies.py  example_usage.py
src/: __init__.py  cli.py
src/pipeline/: __init__.py  orchestrator.py  scheduler.py
src/processors/: __init__.py  analyzer.py  script_generator.py
src/scrapers/: __init__.py  models.py  playwright_scraper.py
src/storage/: __init__.py  database.py  repository.py
src/tts/: __init__.py  base.py  elevenlabs_tts.py  gemini_tts.py  openai_tts.py
