[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtopod"
version = "0.1.0"
description = "Automated Twitter/X to Podcast pipeline using AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Xtopod Team"}
]
keywords = ["twitter", "podcast", "ai", "tts", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web scraping
    "playwright>=1.40.0",
    "twscrape>=0.12.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",

    # Database
    "aiosqlite>=0.19.0",

    # LLM APIs
    "openai>=1.12.0",
    "anthropic>=0.18.0",

    # TTS - Google GenAI for Gemini 2.5 TTS
    "google-genai>=0.3.0",
    "elevenlabs>=1.0.0",

    # Audio processing
    "pydub>=0.25.1",
    "imageio-ffmpeg>=0.5.1",  # Bundles static ffmpeg binary

    # Pipeline orchestration
    "prefect>=2.14.0",
    "apscheduler>=3.10.0",

    # Configuration & utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
dia = [
    # For local Dia TTS model
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "soundfile>=0.12.0",
]

[project.scripts]
xtopod = "xtopod.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
